--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -11,8 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import re"
@@ -27,8 +29,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "text = \"This is going to be a sentence with a good number of vowels in it.\""
@@ -36,10 +40,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i',\n",
+       " 'i',\n",
+       " 'o',\n",
+       " 'i',\n",
+       " 'o',\n",
+       " 'e',\n",
+       " 'a',\n",
+       " 'e',\n",
+       " 'e',\n",
+       " 'e',\n",
+       " 'i',\n",
+       " 'a',\n",
+       " 'o',\n",
+       " 'o',\n",
+       " 'u',\n",
+       " 'e',\n",
+       " 'o',\n",
+       " 'o',\n",
+       " 'e',\n",
+       " 'i',\n",
+       " 'i']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pat = '[aeiou]'\n",
+    "re.findall(pat,text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,8 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "text = \"The puppy saw all the rest of the puppies playing and wanted to join them. I saw this and wanted a puppy of my own!\""
@@ -59,10 +101,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['puppy', 'puppies', 'puppy']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pat = 'puppy|puppies'\n",
+    "re.findall(pat,text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,8 +131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "text = \"I ran the relay race the only way I knew how to run it.\""
@@ -82,10 +142,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ran', 'run']"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pat = 'r[au]n'\n",
+    "re.findall(pat,text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +172,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ran', 'relay', 'race', 'run']"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pat = r\"\\br\\w+\"\n",
+    "re.findall(pat,text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,8 +202,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "text = \"Th!s !s a sentence w!th spec!al characters !n !t.\""
@@ -119,10 +213,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a sentence with special characters in it.'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = text.replace('!','i')\n",
+    "text"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,8 +243,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "text = \"This sentence has words of varying lengths.\""
@@ -142,10 +254,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['This', 'sentence', 'words', 'varying', 'lengths']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pat = '\\w{4,}'\n",
+    "re.findall(pat,text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,8 +284,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "text = \"I bet the robot couldn't beat the other bot with a bat, but instead it bit me.\""
@@ -165,10 +295,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bet', 'bot', 'beat', 'bot', 'bat', 'but', 'bit']"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pat = 'b\\w+'\n",
+    "re.findall(pat,text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,8 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "text = \"During many of the peaks and troughs of history, the people living it didn't fully realize what was unfolding. But we all know we're navigating breathtaking history: Nearly every day could be — maybe will be — a book.\"\n"
@@ -188,10 +336,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 115,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['peaks', 'people', 'realize', 'breathtaking', 'Nearly']"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pat = '\\w+ea\\w+|\\w+eo\\w+'\n",
+    "re.findall(pat,text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,8 +366,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "text = \"Teddy Roosevelt and Abraham Lincoln walk into a bar.\""
@@ -211,10 +377,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Teddy', 'Roosevelt', 'Abraham', 'Lincoln']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pat = '[A-Z][a-z]+'\n",
+    "re.findall(pat,text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,10 +407,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Teddy Roosevelt', 'Abraham Lincoln']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pat = '([A-Z][a-z]+ ?[A-Z][a-z]+)'\n",
+    "print(re.findall(pat, text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,19 +436,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 147,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('\"I will bet you $50 I can get the bartender to give me a free drink.\"', '.'), ('\"I am in!\"', '!')]\n"
+     ]
+    }
+   ],
    "source": [
-    "text = 'Roosevelt says to Lincoln, \"I will bet you $50 I can get the bartender to give me a free drink.\" Lincoln says, \"I am in!\"'\n"
+    "text = 'Roosevelt says to Lincoln, \"I will bet you $50 I can get the bartender to give me a free drink.\" Lincoln says, \"I am in!\"'\n",
+    "pat = '(\"([^\"]|\"\")*\")'\n",
+    "print(re.findall(pat,text))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -264,19 +464,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "text = \"There were 30 students in the class. Of the 30 students, 14 were male and 16 were female. Only 10 students got A's on the exam.\"\n"
+    "text = \"There were 30 students in the class. Of the 30 students, 14 were male and 16 were female. Only 10 students got A's on the exam.\"\n",
+    "pat = '\\d+'\n",
+    "print(re.findall(pat,text))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['30', '30', '14', '16', '10']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pat = '\\d+'\n",
+    "print(re.findall(pat,text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -287,8 +504,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "text = \"\"\"\n",
@@ -299,10 +518,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['876-93-2289', '098-32-5295']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pat = '\\d+-\\d+-\\d+'\n",
+    "print(re.findall(pat,text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -313,10 +545,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['(847)789-098', '(987)222-090']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pat ='\\(\\d{3}\\)\\d{3}-\\d{3}'\n",
+    "print(re.findall(pat,text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -327,10 +572,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['876-93-2289', '(847)789-098', '098-32-5295', '(987)222-090']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pat ='\\d+-\\d+-\\d+|\\(\\d{3}\\)\\d{3}-\\d{3}'\n",
+    "print(re.findall(pat,text))"
+   ]
   }
  ],
  "metadata": {
@@ -349,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
