--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -456,8 +456,7 @@
     "        if i%2 == 0:\n",
     "            print(i)\n",
     "        else:\n",
-    "            print(0)\n",
-    "        \n"
+    "            print(0)"
    ]
   },
   {
@@ -508,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -530,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -556,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -564,10 +563,10 @@
     {
      "data": {
       "text/plain": [
-       "<generator object firstn at 0x10b54c468>"
+       "<generator object firstn at 0x106fea830>"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -597,40 +596,36 @@
     "    # Input: integer\n",
     "    # Output: iterator\n",
     "    number = 0\n",
-    "    l = []\n",
     "    while number < n:\n",
     "        yield number\n",
-    "        number = number + 1\n",
-    "        for i in number:\n",
-    "            if i%2 == 0:\n",
-    "                l.append(i)\n",
-    "    print(l)\n",
-    "    \n",
+    "        number = number + 2\n",
+    "\n",
     "    # Sample Input: 5\n",
     "    # Sample Output: iter([0, 2, 4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<generator object even_iterator at 0x10b5014c0>"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n"
+     ]
     }
    ],
    "source": [
     "# print even_iterator\n",
-    "even_iterator(5)"
+    "iterator = even_iterator(5)\n",
+    "for i in iterator:\n",
+    "    print(i)"
    ]
   },
   {
