--- a/module-1/lab-bag-of-words/your-code/main.ipynb
+++ b/module-1/lab-bag-of-words/your-code/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -142,74 +142,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['is', 'i', 'a', 'student', 'love', 'cool', 'am', 'ironhack', 'at']\n"
+      "['am', 'i', 'is', 'cool', 'ironhack', 'love', 'a', 'student', 'at']\n"
      ]
     }
    ],
    "source": [
     "print(bag_of_words)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ironhack is cool\n",
-      "i love ironhack\n",
-      "i am a student at ironhack\n",
-      "is\n",
-      "i\n",
-      "a\n",
-      "student\n",
-      "love\n",
-      "cool\n",
-      "am\n",
-      "ironhack\n",
-      "at\n"
-     ]
-    }
-   ],
-   "source": [
-    "for c in corpus:\n",
-    "    print(c)\n",
-    "for b in bag_of_words:\n",
-    "    print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1]"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "term_freq = []\n",
-    "y = []\n",
-    "if bag_of_words[0] in 'ironhack is cool':\n",
-    "    x += 1\n",
-    "else:\n",
-    "    x = 0\n",
-    "    \n",
-    "term_freq"
    ]
   },
   {
@@ -221,22 +159,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 1, 1, 1, 0, 1, 0, 0]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "term_freq = []\n",
     "x = []\n",
+    "for b in bag_of_words:\n",
+    "    if b in corpus[0]:\n",
+    "        x.append(1)\n",
+    "    else: \n",
+    "        x.append(0)\n",
+    "x\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 1, 1, 1, 0, 1, 0, 0], [0, 1, 0, 0, 1, 1, 1, 0, 0], [1, 1, 0, 0, 1, 0, 1, 1, 1]]\n",
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n",
+      "['am', 'i', 'is', 'cool', 'ironhack', 'love', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
+   "source": [
+    "term_freq = []\n",
+    "p = 0\n",
     "for c in corpus:\n",
+    "    x = []\n",
     "    for b in bag_of_words:\n",
     "        if b in c:\n",
+    "            p += 1\n",
     "            x.append(1)\n",
-    "        else:\n",
+    "        else: \n",
     "            x.append(0)\n",
     "    term_freq.append(x)\n",
-    "            "
+    "            \n",
+    "prueba = [[]]           \n",
+    "print(term_freq)\n",
+    "print(corpus)\n",
+    "print(bag_of_words)  "
    ]
   },
   {
@@ -247,15 +231,6 @@
     "\n",
     "```[[1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 0, 0, 1, 1, 0, 0, 0, 0], [1, 0, 0, 1, 0, 1, 1, 1, 1]]```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
