--- a/module-1/lab-lambda-functions/your-code/main.ipynb
+++ b/module-1/lab-lambda-functions/your-code/main.ipynb
@@ -35,15 +35,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "l = [######]\n",
-    "f = lambda x: #define the lambda expression\n",
+    "l = [1,2,3,4,5,6,7,8,9,10]\n",
+    "f = lambda x: x[i] = 2 for i in x\n",
     "b = []\n",
     "def modify_list(lst, fudduLambda):\n",
-    "    for x in ####:\n",
-    "        b.append(#####(x))\n",
+    "    for x in lst:\n",
+    "        b.append(f(x))\n",
     "#Call modify_list(##,##)\n",
     "#print b"
    ]
@@ -59,12 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "c_k =lambda x: x+273.15"
    ]
   },
   {
@@ -77,12 +81,27 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[285.15, 296.15, 311.15, 218.14999999999998, 297.15]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "temps = [12, 23, 38, -55, 24]\n",
     "\n",
-    "# Your code here:"
+    "# Your code here:\n",
+    "k = [c_k(i) for i in temps]\n",
+    "k"
    ]
   },
   {
@@ -96,11 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "mod = lambda x,y: 1 if x%y == 0  else 0"
    ]
   },
   {
@@ -114,8 +136,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def divisor(b):\n",
@@ -123,8 +147,8 @@
     "    input: a number\n",
     "    output: a function that returns 1 if the number is divisible by another number (to be passed later) and zero otherwise\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    return lambda y: 1 if y%b == 0  else 0"
    ]
   },
   {
@@ -136,11 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "divisible5 = divisor(5)"
    ]
   },
   {
@@ -152,18 +178,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(8)"
    ]
@@ -183,8 +235,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -195,7 +249,7 @@
        " ('tomato', 'tomato')]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,14 +272,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2), (2, 3), (3, 4), (4, 5)]\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [1,2,3,4]\n",
     "list2 = [2,3,4,5]\n",
     "## Zip the lists together \n",
-    "## Print the zipped list "
+    "## Print the zipped list \n",
+    "z = list(zip(list1,list2))\n",
+    "print(z)"
    ]
   },
   {
@@ -237,28 +303,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\n\\ncompare = lambda ###: print(\"True\") if ### else print(\"False\")\\nfor ### in zip(list1,list2):\\n    compare(###)\\n    \\n'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
     }
    ],
    "source": [
-    "'''\n",
-    "\n",
-    "compare = lambda ###: print(\"True\") if ### else print(\"False\")\n",
-    "for ### in zip(list1,list2):\n",
-    "    compare(###)\n",
-    "    \n",
-    "'''    "
+    "compare = lambda x,y: print(\"True\") if x>y else print(\"False\")\n",
+    "for i,j in zip(list1,list2):\n",
+    "    compare(i,j)"
    ]
   },
   {
@@ -274,14 +338,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Political Science', 'Essay'),\n",
+       " ('Computer Science', 'Homework'),\n",
+       " ('Engineering', 'Lab'),\n",
+       " ('Mathematics', 'Module')]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1 = ['Engineering', 'Computer Science', 'Political Science', 'Mathematics']\n",
     "list2 = ['Lab', 'Homework', 'Essay', 'Module']\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "f= lambda u: u[1][0]\n",
+    "\n",
+    "sorted(zip(list1,list2), key=f)\n"
    ]
   },
   {
@@ -296,7 +380,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "d = {'Honda': 1997, 'Toyota': 1995, 'Audi': 2001, 'BMW': 2005}\n",
@@ -307,7 +393,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -328,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
