--- a/module-1/lab-lambda-functions/your-code/main.ipynb
+++ b/module-1/lab-lambda-functions/your-code/main.ipynb
@@ -34,20 +34,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n"
+     ]
+    }
+   ],
    "source": [
     "l = [1,2,3,4,5,6,7,8,9,10]\n",
-    "f = lambda x: x[i] = 2 for i in x\n",
+    "f = lambda y: y+1\n",
     "b = []\n",
     "def modify_list(lst, fudduLambda):\n",
-    "    for x in lst:\n",
-    "        b.append(f(x))\n",
-    "#Call modify_list(##,##)\n",
-    "#print b"
+    "    b = [fudduLambda(lst[i]) for i in range(len(lst))]\n",
+    "    print(b)\n",
+    "\n",
+    "modify_list(l, f)"
    ]
   },
   {
@@ -387,7 +395,7 @@
    "source": [
     "d = {'Honda': 1997, 'Toyota': 1995, 'Audi': 2001, 'BMW': 2005}\n",
     "\n",
-    "# Your code here:"
+    "# Your code here:\n"
    ]
   },
   {
