--- a/module-1/lab-data_cleaning/your-code/main.ipynb
+++ b/module-1/lab-data_cleaning/your-code/main.ipynb
@@ -10,9 +10,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!pip install --upgrade pip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!pip install pymysql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!pip install sqlalchemy"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -23,10 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pymysql\n",
+    "from sqlalchemy import create_engine"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,9 +81,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip install mysql-connector-python==8.0.11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "engine=create_engine('mysql+mysqlconnector://guest:relational@relational.fit.cvut.cz')\n",
+    "query= 'SELECT * FROM stats.users AS users'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,10 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "users = pd.read_sql_query(query, engine)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,10 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "users.rename(columns ={'Id':'userId'}, inplace = True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,10 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "posts = pd.read_sql_query('SELECT * FROM stats.posts as posts', engine)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "posts.rename(columns = {'Id': 'postId','OwnerUserId':'userId'}, inplace = True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +184,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "us = pd.DataFrame(users[['userId', 'Reputation','Views','UpVotes','DownVotes']])\n",
+    "pos = pd.DataFrame(posts[['postId', 'Score','userId','ViewCount','CommentCount']])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -124,10 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "merge = users.merge(users,'left', on = 'userId')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,10 +222,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WebsiteUrl_x         32204\n",
+       "Location_x           28634\n",
+       "AboutMe_x            30946\n",
+       "Age_x                32007\n",
+       "ProfileImageUrl_x    23846\n",
+       "WebsiteUrl_y         32204\n",
+       "Location_y           28634\n",
+       "AboutMe_y            30946\n",
+       "Age_y                32007\n",
+       "ProfileImageUrl_y    23846\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_cols = merge.isnull().sum()\n",
+    "null_cols[null_cols>0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,9 +264,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "Pues todo depende de la información, por que puede ser que esa columna se preste \n",
+    "para tener missing values en vez de ceros o -, ya que ese registro no cuenta con \n",
+    "esas características.\n",
+    "\n",
+    "En este caso, todas las columnas con campos vacios las voy a rellenar con \"-\" menos\n",
+    "Age_x y Age_y, esas las rellenare con 0\n",
+    "'''\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "merge[['WebsiteUrl_x','Location_x','AboutMe_x','ProfileImageUrl_x','WebsiteUrl_x','Location_x','AboutMe_x','ProfileImageUrl_x']]= merge[['WebsiteUrl_x','Location_x','AboutMe_x','ProfileImageUrl_x','WebsiteUrl_x','Location_x','AboutMe_x','ProfileImageUrl_x']].fillna('-')\n",
+    "merge[['Age_x','Age_y']]= merge[['Age_x','Age_y']].fillna(0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,10 +300,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Se deben de cambiar las Age_x y Age_y a object, ya que\n",
+    "merge['Age_x']=merge['Age_x'].astype('int64')\n",
+    "merge['Age_y']=merge['Age_y'].astype('int64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "userId                          int64\n",
+       "Reputation_x                    int64\n",
+       "b'CreationDate'_x      datetime64[ns]\n",
+       "DisplayName_x                  object\n",
+       "b'LastAccessDate'_x    datetime64[ns]\n",
+       "WebsiteUrl_x                   object\n",
+       "Location_x                     object\n",
+       "AboutMe_x                      object\n",
+       "Views_x                         int64\n",
+       "UpVotes_x                       int64\n",
+       "DownVotes_x                     int64\n",
+       "AccountId_x                     int64\n",
+       "Age_x                           int64\n",
+       "ProfileImageUrl_x              object\n",
+       "Reputation_y                    int64\n",
+       "b'CreationDate'_y      datetime64[ns]\n",
+       "DisplayName_y                  object\n",
+       "b'LastAccessDate'_y    datetime64[ns]\n",
+       "WebsiteUrl_y                   object\n",
+       "Location_y                     object\n",
+       "AboutMe_y                      object\n",
+       "Views_y                         int64\n",
+       "UpVotes_y                       int64\n",
+       "DownVotes_y                     int64\n",
+       "AccountId_y                     int64\n",
+       "Age_y                           int64\n",
+       "ProfileImageUrl_y              object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merge.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
