--- a/module-1/lab-parsing-api/your-code/main.ipynb
+++ b/module-1/lab-parsing-api/your-code/main.ipynb
@@ -30,10 +30,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# your code here"
+    "url='https://www.zalando.fr/api/catalog/articles?categories=promo-homme&limit=84&offset=84&sort=sale'\n",
+    "headers = {'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36'}"
    ]
   },
   {
@@ -60,11 +63,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import json\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "from pandas.io.json import json_normalize\n",
+    "\n",
+    "response = requests.get(url, headers=headers)\n",
+    "response.status_code\n",
+    "\n",
+    "results = response.json()\n",
+    "results\n",
+    "\n",
+    "\n",
+    "flattened_data = json_normalize(results)\n",
+    "\n",
+    "flattened_data1 = json_normalize(flattened_data.articles[0])\n",
+    "flattened_data1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Get the total number of pages\n",
+    "total_pages=results['pagination']['page_count']\n",
+    "\n",
+    "#cambiamos el offset a 168 para situarnos en la hoja2, ya que cada hoja consta de 84 productos\n",
+    "\n",
+    "# Your code\n",
+    "df=pd.DataFrame()\n",
+    "for i in range(total_pages):\n",
+    "    k=84*i\n",
+    "    url=f'https://www.zalando.fr/api/catalog/articles?categories=promo-homme&limit=84&offset=168&sort=sale'\n",
+    "    \n",
+    "    response = requests.get(url, headers=headers)\n",
+    "    results = response.json()\n",
+    "    flattened_data = json_normalize(results)\n",
+    "    flattened_data1 = json_normalize(flattened_data.articles[0])\n",
+    "    flattened_data1=flattened_data1.set_index('sku')\n",
+    "    df = df.append(flattened_data1)\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -84,10 +143,115 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "# your code here"
+    "#trending brand\n",
+    "df['brand_name'].value_counts().index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Vemos como vienen los datos de las columnas\n",
+    "set(df['price.original'])\n",
+    "set(df['price.promotional'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# extraemos los valores que nos interesan y quitamos la basura\n",
+    "df['price.original']=df['price.original'].str.extract('(\\d*,\\d*)')\n",
+    "df['price.promotional']=df['price.promotional'].str.extract('(\\d*,\\d*)')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# convertimos a tipo string para poder aplicar el replace del ',' al '.'\n",
+    "df['price.promotional'] = df['price.promotional'].astype(str)\n",
+    "df['price.promotional'] = [x.replace(',', '.') for x in df['price.promotional']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df['price.original'] = df['price.original'].astype(str)\n",
+    "df['price.original'] = [x.replace(',', '.') for x in df['price.original']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# convertimos a float\n",
+    "df['price.promotional'] = df['price.promotional'].astype(float)\n",
+    "df['price.original'] = df['price.original'].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# restamos el precio d descuento al original para ver cuanto es el cobro real.\n",
+    "df['descuento_real'] = df['price.original'] - df['price.promotional']\n",
+    "df1=df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# agrupamos el data frame por la marca y se hace la suma de todos las marcas para ver cual es la que hizo los mayores descuento, y hacemos los acomodamos de mayor a menor para poder tomar el primer valor. \n",
+    "dec_total=df1.groupby(['brand_name']).sum().descuento_real\n",
+    "dec_total.sort_values(ascending=False).index[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Filtramos por el valor si este fue de cero, entonces no dio descuentos\n",
+    "dec_total[dec_total==0]"
    ]
   }
  ],
@@ -107,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
